--- a/Predicting Youtube View Counts.ipynb
+++ b/Predicting Youtube View Counts.ipynb
@@ -124,6 +124,7 @@
     "import pandas as pd \n",
     "import numpy as np\n",
     "\n",
+    "#code for data collection that writes to csv in Appendix\n",
     "youtube_data = pd.read_csv(\"video_data_final.csv\", encoding = \"ISO-8859-1\")"
    ]
   },
@@ -430,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This code block is to clean the title and turn it into words."
+    "This code block is to convert the title string into words."
    ]
   },
   {
@@ -699,7 +700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We took out the tags that had max count of 0 since these would not give us any information. We also removed the tags which had no correlation with view count. The remaining tags were: adjective, cardinal digit, and preposition or subordinating conjunction. "
+    "We took out the tags that had max count of 0 since these would not give us any information. We also removed the tags which had no correlation with view count. The remaining tags were: adjective, cardinal digit, and preposition/subordinating conjunction. "
    ]
   },
   {
@@ -1554,14 +1555,12 @@
     "# GradientBoosting Classifier to differentiate Outliers\n",
     "outlier_clf = GradientBoostingClassifier()\n",
     "outlier_clf.fit(tr_features, tr_labels)\n",
-    "#get_err_samples(outlier_clf, tr_features, tr_labels, te_features, te_labels)\n",
     "gb_c = (te_labels == outlier_clf.predict(te_features)).mean()\n",
     "print(\"Accuracy Classification: \", gb_c)\n",
     "\n",
     "# GradientBoosting Regressor to predict viewcounts on nonOutlier data\n",
     "views_rgr_nonOut = GradientBoostingRegressor()\n",
     "views_rgr_nonOut.fit(tr_features_nonOut, tr_regtarget_nonOut)\n",
-    "#get_err_samples(views_rgr_nonOut, tr_features_nonOut, tr_regtarget_nonOut, te_features_nonOut, te_regtarget_nonOut)\n",
     "error_nonOut = np.mean(np.square(te_regtarget_nonOut - views_rgr_nonOut.predict(te_features_nonOut)))\n",
     "gb_r = error_nonOut.mean()\n",
     "print(\"MSE Regression: \", gb_r)"
@@ -1701,6 +1700,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now compare the results from each of the models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
@@ -1792,7 +1798,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Firstly, we note the following three of the models do much better than baseline: Gradient Boosting, Random Forest and Regression. MLP does the worst on MSE Regression, even worse than baseline. It seems the best algorithm for both classification accuracy and MSE regression is Gradient Boosting. We see Gradient Boosting does the best. This makes sense because this is what are called \"ensemble methods\" which combine multiple tree models that are fit to random subsets of the data, and that leads to a better predictor. Also decision trees are insensitive to scale of features, and since we only normalized view count this benefits our models. Gradient boosting is preferred because it does boosting. In other words, it upweights and downweights points through iterations. Also since our data is tabular boosting works well. "
+    "Firstly, we note all the following models do much better than baseline. Regression does the worst on MSE Regression, but still better than baseline. It seems the best algorithm for both classification accuracy and MSE regression is Gradient Boosting. We see Gradient Boosting does the best. This makes sense because this is what are called \"ensemble methods\" which combine multiple tree models that are fit to random subsets of the data, and that leads to a better predictor. Also decision trees are insensitive to scale of features, and since we only normalized view count this benefits our models. Gradient boosting is preferred because it does boosting. In other words, it upweights and downweights points through iterations. Also since our data is tabular boosting works well. "
    ]
   },
   {
