Minor final detail modifications (Ex: topic count fix)

--- a/Predicting Youtube View Counts.ipynb
+++ b/Predicting Youtube View Counts.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we wanted to see which features were correlated with view count. To do this we used plotnine which implements gglot in Python."
+    "Next we wanted to see which features were correlated with view count among the non-viral videos. To do this we used plotnine which implements gglot in Python."
    ]
   },
   {
@@ -140,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -180,7 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -219,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -248,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consequenly we decided to split our data into 2 groups: outlier vs non-outlier. We used the statistics above to determine to split at 1.5*(interquartile range) + 75th percentile. "
+    "Consequenly we decided to split our data into 2 groups: outlier (viral videos) vs non-outlier (non-viral videos). We used the statistics above to decide to split at 1.5*(interquartile range) + 75th percentile. "
    ]
   },
   {
@@ -273,7 +279,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -313,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -346,7 +356,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -379,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -476,7 +490,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -569,6 +585,7 @@
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -588,7 +605,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -707,6 +726,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -743,6 +763,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -778,7 +799,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -820,7 +843,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
@@ -848,7 +873,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -883,7 +910,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -918,7 +947,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -995,7 +1026,7 @@
    "source": [
     "### Text Analysis on Topics\n",
     "\n",
-    "We found the top 10 topics across all the videos and made a binary feature vector indicating which of these topics correspond to each video."
+    "We found the top 15 topics across all the videos and made a binary feature vector indicating which of these topics correspond to each video."
    ]
   },
   {
@@ -1056,7 +1087,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1089,7 +1122,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1122,7 +1157,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1155,7 +1192,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1188,7 +1227,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1221,7 +1262,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1254,7 +1297,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1287,7 +1332,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1320,7 +1367,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1367,7 +1416,9 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "youtube_data = youtube_data[['titleLen', 'likeCount', 'title_JJ', 'title_CD', 'title_IN', \n",
@@ -1379,7 +1430,9 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1433,7 +1486,9 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import math\n",
@@ -1500,7 +1555,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1531,13 +1588,15 @@
    "source": [
     "#### Gradient Boosting\n",
     "\n",
-    "We will use GradientBoostingClassifier GradientBoostingRegressor, and compare the results to our baseline."
+    "First, we will use GradientBoostingClassifier and GradientBoostingRegressor, and compare the results to our baseline."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1572,7 +1631,7 @@
    "source": [
     "#### Random Forest\n",
     "\n",
-    "We will use RandomForestClassifier and RandomForestRegressor, and compare the results to our baseline.\n",
+    "Next, we will use RandomForestClassifier and RandomForestRegressor, and compare the results to our baseline.\n",
     "\n",
     "For more information about Random Forests: https://towardsdatascience.com/the-random-forest-algorithm-d457d499ffcd"
    ]
@@ -1580,7 +1639,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1613,13 +1674,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### MLP "
+    "#### MLP \n",
+    "\n",
+    "Next, we will use MLPClassifier and MLPRegressor, and compare the results to our baseline."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -1655,13 +1719,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Logistic/Linear Regression"
+    "#### Logistic/Linear Regression\n",
+    "\n",
+    "Finally, we will use LogisticRegression and LinearRegression, and compare the results to our baseline."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1709,7 +1777,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1737,7 +1807,9 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1767,7 +1839,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1798,7 +1872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Firstly, we note all the following models do much better than baseline. Regression does the worst on MSE Regression, but still better than baseline. It seems the best algorithm for both classification accuracy and MSE regression is Gradient Boosting. We see Gradient Boosting does the best. This makes sense because this is what are called \"ensemble methods\" which combine multiple tree models that are fit to random subsets of the data, and that leads to a better predictor. Also decision trees are insensitive to scale of features, and since we only normalized view count this benefits our models. Gradient boosting is preferred because it does boosting. In other words, it upweights and downweights points through iterations. Also since our data is tabular boosting works well. "
+    "Firstly, we note all the following models do much better than baseline. Regression does the worst on MSE Regression, but still better than baseline. It seems the best algorithm for both classification accuracy and MSE regression is Gradient Boosting. This makes sense because this is what are called \"ensemble methods\" which combine multiple tree models that are fit to random subsets of the data, and that leads to a better predictor. Also decision trees are insensitive to scale of features and since we only normalized view count, this benefits our models. Gradient boosting is preferred because it does boosting. In other words, it upweights and downweights points through iterations. Also since our data is tabular, boosting works well. "
    ]
   },
   {
@@ -1829,7 +1903,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Separate into data and labels, train vs. test\n",
@@ -1844,7 +1920,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1879,7 +1957,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As evident, we achieve as good a classification accuracy and MSE error with likeCount as the only feature. Thus the other features don't add much information. So, for our random sample, for any given youtube video it should suffice to predict viewCount using only likeCount."
+    "As evident, we achieve as good a classification accuracy and MSE error with likeCount as the only feature. Thus the other features don't add much information to our estimator. So, among our random sample, for any given youtube video it should suffice to predict viewCount using only likeCount."
    ]
   },
   {
@@ -1894,9 +1972,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the distribution of view counts started very skewed and even after log transform remained skewed, we could try changing our dataset to be less generic. For example, we could limit videos to be related to a particular topic, and train/test just within that topic. We could see how this changes the feature selection process. \n",
+    "Since the distribution of view counts started very skewed and even after log transform remained skewed, we could try changing our dataset to be less generic. For example, we could limit videos to be related to a particular topic, and train/test just within that topic. And we could see how this changes the feature selection process. \n",
     "\n",
-    "Something else to try could be prinicipal component analysis (PCA) in feature selection. However this would make the model less interpretable. "
+    "Something else to try could be prinicipal component analysis (PCA) in feature selection. However this would make the overall model less interpretable relative to the actual features of each youtube video."
    ]
   },
   {
@@ -2059,7 +2137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
